@@ -1,3 +1,15 @@
+2017-11-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-890
+
+	* src/m_fos.cc (iyHybrid): Adopted to change in
+	rtmethods_unit_conversion.
+
+	* src/m_rte.cc (iyEmissionStandard2): Adopted to change in
+	rtmethods_unit_conversion.
+
+	* src/rte.cc (rtmethods_unit_conversion): Now also handling ppvar_iy.
+
 2017-11-23  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-889
